# resume-skills

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
docs/: STATUS.md  audit-docs-vs-code.md  audit-host-docs-evidence.md  audit-security-docs.md  clean-room-attestation.md  code-review-final.md  code-review-rereview.md  code-review-security-final.md  evidence-summary.md  host-support.md  host-ui-smoke.md  install-hosts.md  opensource-readiness-final.md  provenance.md  release-claim.md  source-formats.md
plans/: 001-manifest-path-containment.md  002-cursor-meta-stable-read.md  003-claude-within-min-zero.md  004-archived-uuid-case-match.md  005-uninstall-empty-dir-scope.md  006-readbudget-record-accounting.md  007-grok-chunk-coalesce-cap.md  008-check-secrets-gate-alignment.md  009-latest-discovery-beyond-name-cap.md  010-cursor-live-blob-order.md  011-test-query-only-live-sqlite.md  012-test-cursor-live-providers.md  013-codex-large-db-live-query.md  014-list-metadata-only-perf.md  015-install-orphan-file-cleanup.md  016-expand-runtime-secret-redaction.md  017-version-pyproject-ci-311.md  018-agents-md-and-provenance-docs.md  019-adapter-common-helpers.md  020-split-cursor-codex-modules.md  021-host-ui-activation-spike.md  022-dual-os-release-claim.md  023-cursor-bubble-graph-spike.md  024-install-hash-nofollow.md  025-runtime-bundle-whitelist.md  README.md
schemas/: portable-resume-v1.schema.json
scripts/: check_secrets.py  install-resume-skills  (+3 more)
(+208 files in other folders)
