[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "portable-resume"
version = "0.2.2"
description = "Offline, local-only portable resume skills across coding agents"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "portable-resume-skills contributors" }]
# Runtime is stdlib-only; no third-party dependencies.
dependencies = []

[project.optional-dependencies]
dev = []

[project.scripts]
portable-resume = "portable_resume.reader:main"
install-resume-skills = "portable_resume.install.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
portable_resume = ["resources/**/*"]
